2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Check the consistency of tools/simple_point3d_lut_26_6.hh.

	* tools/simple_point3d_lut_26_6.cc: New.
	* tools/test_simple_point3d_lut_26_6.cc: New.
	* tools/tools.mk (AM_CPPFLAGS): Add -I$(top_builddir)/milena.
	* tools/Makefile.am (noinst_LTLIBRARIES): New.
	Add libsimple_point3d_lut_26_6.la.
	(libsimple_point3d_lut_26_6_la_SOURCES): New.
	(EXTRA_PROGRAMS): Add test_simple_point3d_lut_26_6.
	(test_simple_point3d_lut_26_6_SOURCES)
	(test_simple_point3d_lut_26_6_LDADD):
	New.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Fix and improve the (fast) computation of 2D connectivity numbers.

	* mln/topo/is_simple_2d.hh (mln::connectivity_number_2d): Create
	the configuration number by considering that the first (resp.
	last) neighbors (in the forward browsing order) represent the
	least (resp. most) significant bits of the configuration number,
	as does the algorithm that computed the 8-c and 4-c LUTs (arrays
	mln::connectivity_number_c8 and mln::connectivity_number_c4).
	* mln/topo/connectivity_number_2d.hh: New.
	* mln/topo/is_simple_point2d.hh: Fix dates in copyright header.
	* tests/topo/connectivity_numbers_2d.cc: New.
	* tests/topo/Makefile.am (check_PROGRAMS):
	Add connectivity_numbers_2d.
	(connectivity_numbers_2d_SOURCES): New.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Add more tests.

	* tests/core/alias/dpoint2d.cc: Exercise the substraction of a
	dpoint2d from a point2d.
	* tests/core/alias/neighb2d.cc: New.
	* tests/core/alias/Makefile.am (check_PROGRAMS): Add neighb2d.
	(neighb2d_SOURCES): New.
	* tests/io/dump/dump.cc: Exercise mln::io::dump::load and
	mln::io::dump::save with 3D binary images.
	* tests/io/dump/Makefile.am (MOSTLYCLEANFILES):
	Add dump-bool-3d.dump
	* tests/value/int_u32.cc: New test (known to fail).
	* tests/value/Makefile.am (check_PROGRAMS): Add int_u32.
	(int_u32_SOURCES): New.
	(XFAIL_TESTS): New.
	Add int_u32.
